# got-portable

./: .cirrus.yml  .gitignore  CHANGELOG  CHANGES  LICENCE  Makefile  Makefile.am  Makefile.common.in  Makefile.inc  README  README.portable  TODO  autogen.sh  configure.ac  got-dist.txt  got-version.mk
.github/: README.md
.github/ci/: before-install.sh  before-install.sh.orig  build.sh
.github/workflows/: closepr.yml
compat/: Makefile.am  asprintf.c  base64.c  bsd-poll.c  bsd-poll.h  err.c  fmt_scaled.c  getdtablecount.c  getopt.c  getprogname.c  imsg-buffer.c  imsg.c  imsg.h  landlock.c  merge.c  reallocarray.c  recallocarray.c  setproctitle.c  sha2.c  sha2.h  siphash.c  sockaddr-linux.c  uuid.c  xmalloc.c  xmalloc.h
compat/include/sys/: queue.h  tree.h
cvg/: Makefile  Makefile.am  cvg.1  cvg.c  got.c
gitwrapper/: Makefile  Makefile.am  gitwrapper.1  gitwrapper.c
got/: Makefile  Makefile.am  git-repository.5  got-repository.5  got-worktree.5  got.1  got.c  got.conf.5  got.h  parse.y
gotadmin/: Makefile  Makefile.am  gotadmin.1  gotadmin.c
gotctl/: Makefile  Makefile.am  gotctl.8  gotctl.c
gotd/: Makefile  Makefile.am  auth.c  auth.h  chroot-notobsd.c  chroot-openbsd.c  gotd-secrets.conf.5  gotd.8  gotd.c  gotd.conf.5  gotd.h  imsg.c  listen.c  listen.h  log.c  notify.c  notify.h  parse.y  privsep_stub.c  repo_imsg.c  repo_read.c  repo_read.h  repo_write.c  repo_write.h  secrets.c  secrets.h  session.c  session.h  session_read.c  session_read.h  session_write.c  session_write.h
gotd/libexec/: Makefile  Makefile.am  Makefile.inc
gotd/libexec/got-notify-email/: Makefile  Makefile.am  got-notify-email.c
gotd/libexec/got-notify-http/: Makefile  Makefile.am  got-notify-http.c  utf8d.h
gotd/libexec/gotsys/: Makefile
gotd/libexec/gotsys-apply/: Makefile  gotsys-apply.c
gotd/libexec/gotsys-check/: Makefile  gotsys-check.c  imsg.c
gotsh/: Makefile  Makefile.am  gotsh.1  gotsh.c
gotsys/: Makefile  gotsys.1  gotsys.c  gotsys.conf.5  gotsys.h  parse.y  privsep_stub.c
gotsysctl/: Makefile  gotsysctl.8  gotsysctl.c
gotsysd/: Makefile  auth.c  auth.h  gotsysd.8  gotsysd.c  gotsysd.conf.5  gotsysd.h  helpers.c  helpers.h  imsg.c  listen.c  listen.h  parse.y  sysconf.c  sysconf.h
gotsysd/libexec/: Makefile
gotweb/: Makefile  Makefile.inc  README  TODO  gotweb.8  gotweb.c  gotweb.conf.5  gotweb.h  gotweb_ui.h  parse.y
gotweb/libexec/: Makefile.inc
gotwebd/: Makefile  Makefile.am  Makefile.inc  config.c  fcgi.c  got_operations.c  gotweb.c  gotwebd.8  gotwebd.c  gotwebd.conf.5  gotwebd.h  log.c  pages.tmpl  parse.y  proc.c  proc.h  sockets.c
gotwebd/files/htdocs/gotwebd/: gotweb.css
gotwebd/libexec/: Makefile
gotwebd/libexec/got-read-blob/: Makefile
gotwebd/libexec/got-read-commit/: Makefile
gotwebd/libexec/got-read-gitconfig/: Makefile
gotwebd/libexec/got-read-gotconfig/: Makefile
gotwebd/libexec/got-read-object/: Makefile
gotwebd/libexec/got-read-pack/: Makefile
gotwebd/libexec/got-read-tag/: Makefile
gotwebd/libexec/got-read-tree/: Makefile
include/: .got_commit_graph.h.swp  got_blame.h  got_cancel.h  got_commit_graph.h  got_compat.h  got_compat2.h  got_date.h  got_dial.h  got_diff.h  got_error.h  got_fetch.h  got_gotconfig.h  got_keyword.h  got_object.h  got_opentemp.h  got_patch.h  got_path.h  got_privsep.h  got_reference.h  got_refs.h  got_repository.h  got_repository_admin.h  got_repository_dump.h  got_repository_load.h  got_send.h  got_serve.h  got_sha1.h  got_sigs.h  got_sockaddr.h  got_utf8.h  got_version.h  got_worktree.h  got_worktree_cvg.h
lib/: .commit_graph.c.swp  Makefile  arraylist.h  blame.c  bloom.c  bloom.h  buf.c  buf.h  bufio.c  bufio.h  commit_graph.c  date.c  deflate.c  delta.c  delta.h  delta_cache.c  deltify.c  dial.c  diff.c  diff.h  diff3.c  diff_atomize_text.c  diff_debug.h  diff_internal.h  diff_main.c  diff_main.h  diff_myers.c  diff_output.c  diff_output.h  diff_output_edscript.c  diff_output_plain.c  diff_output_unidiff.c  diff_patience.c  diffoffset.c  diffreg.c  dump.c  error.c  fetch.c  fileindex.c  gitconfig.c  (+119 more)
libexec/: Makefile  Makefile.am  Makefile.inc
libexec/got-fetch-http/: Makefile  Makefile.am  got-fetch-http  got-fetch-http.c
libexec/got-fetch-pack/: Makefile  Makefile.am  got-fetch-pack.c
libexec/got-http/: Makefile
libexec/got-index-pack/: Makefile  Makefile.am  got-index-pack.c
libexec/got-read-blob/: Makefile  Makefile.am  got-read-blob.c
libexec/got-read-commit/: Makefile  Makefile.am  got-read-commit.c
libexec/got-read-gitconfig/: Makefile  Makefile.am  got-read-gitconfig.c
libexec/got-read-gotconfig/: Makefile  Makefile.am  got-read-gotconfig.c  gotconfig.h  parse.y
libexec/got-read-object/: Makefile  Makefile.am  got-read-object.c
libexec/got-read-pack/: Makefile  Makefile.am  got-read-pack.c
libexec/got-read-patch/: Makefile  Makefile.am  got-read-patch.c
libexec/got-read-tag/: Makefile  Makefile.am  got-read-tag.c
libexec/got-read-tree/: Makefile  Makefile.am  got-read-tree.c
libexec/got-send-pack/: Makefile  Makefile.am  got-send-pack.c
maintscripts/: README.md  mk-portable-release.sh  sync-upstream.sh
regress/: Makefile  Makefile.inc
regress/cmdline/: Makefile  Makefile.am  add.sh  backout.sh  blame.sh  branch.sh  cat.sh  checkout.sh  cherrypick.sh  cleanup.sh  clone.sh  commit.sh  common.sh  diff.sh  dump.sh  fetch.sh  histedit.sh  http-server  import.sh  init.sh  integrate.sh  load.sh  log.sh  memleak.sh  merge.sh  pack.sh  patch.sh  rebase.sh  ref.sh  revert.sh  rm.sh  send.sh  stage.sh  status.sh  tag.sh  tree.sh  unstage.sh  update.sh
regress/delta/: Makefile  delta_test  delta_test.c
regress/deltify/: Makefile  deltify_test  deltify_test.c
regress/fetch/: Makefile  fetch_test  fetch_test.c
regress/gotd/: .gitignore  Makefile  README  check_test_repo.sh  common.sh  (+20 more)
template/: Makefile  Makefile.am  Makefile.common.in  configure.ac  got_compat.h  parse.y  template.1  template.7  template.c  tmpl.c  tmpl.h
tog/: Makefile  Makefile.am  tog.1  tog.c
util/: got-build-regress.sh  got-portable-ver.sh  uncompress-loose-object.sh
(+110 files in other folders)
